--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -18,3 +18,11 @@ include::{snippets}/product-create/request-fields.adoc[]
 === 응답
 
 include::{snippets}/product-create/http-response.adoc[]
+
+== 상품 삭제
+
+=== 요청
+
+include::{snippets}/product-delete/http-request.adoc[]
+
+include::{snippets}/product-delete/path-parameters.adoc[]
