--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -26,3 +26,17 @@ include::{snippets}/product-create/http-response.adoc[]
 include::{snippets}/product-delete/http-request.adoc[]
 
 include::{snippets}/product-delete/path-parameters.adoc[]
+
+== 상품 수정
+
+=== 요청
+
+include::{snippets}/product-update/http-request.adoc[]
+
+include::{snippets}/product-update/request-fields.adoc[]
+
+include::{snippets}/product-update/path-parameters.adoc[]
+
+=== 응답
+
+include::{snippets}/product-update/http-response.adoc[]
