[#13] restdocs with product update (#16)
* [#5] Feat product soft delete

* [#5] Feat product delete test code

* [#5] Feat add Product Delete test with Rest docs

* [#9] Feat add Product extends BaseTimeEntity

* [#9] Feat product 수정 기능 구현

* [#9] Feat 상품 수정 기능 구현

* [#13] Docs product-update restdocs

---------

Co-authored-by: yallo428 <116006875+yallo428@users.noreply.github.com>

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -27,6 +27,21 @@ include::{snippets}/product-delete/http-request.adoc[]
 
 include::{snippets}/product-delete/path-parameters.adoc[]
 
+== 상품 수정
+
+=== 요청
+
+include::{snippets}/product-update/http-request.adoc[]
+
+include::{snippets}/product-update/request-fields.adoc[]
+
+include::{snippets}/product-update/path-parameters.adoc[]
+
+=== 응답
+
+include::{snippets}/product-update/http-response.adoc[]
+=======
+
 == 팀 생성
 
 === 요청
