[#20] Docs TeamController deleteTeam docs succeeds

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -63,3 +63,14 @@ include::{snippets}/team-update/request-fields.adoc[]
 === 응답
 
 include::{snippets}/team-update/http-response.adoc[]
+
+==팀 삭제
+
+=== 요청
+
+include::{snippets}/team-delete/http-request.adoc[]
+include::{snippets}/team-delete/path-parameters.adoc[]
+
+=== 응답
+
+include::{snippets}/team-delete/http-response.adoc[]
