[#24] Product 조회 기능 구현 (#27)
* [#5] Feat product soft delete

* [#5] Feat product delete test code

* [#5] Feat add Product Delete test with Rest docs

* [#9] Feat add Product extends BaseTimeEntity

* [#9] Feat product 수정 기능 구현

* [#9] Feat 상품 수정 기능 구현

* [#13] Docs product-update restdocs

* [#14] Feat ValidEnum Annotation

* [#22] convert to record

* [#22] Refactor 불 필요한 import 제거 및 자잘한 수정

* [#24] Feat product 단건 조회 기능 구현

* [#24] add query dsl configuration

* [#24] Feat 무한 스크롤 페이지네이션 구현

* [#24] Feat ProductController 페이지 네이션 메소드 구현

* [#24] Test ProductPagination Controller test

---------

Co-authored-by: yallo428 <116006875+yallo428@users.noreply.github.com>

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -52,6 +52,13 @@ include::{snippets}/team-create/request-fields.adoc[]
 === 응답
 
 include::{snippets}/team-create/http-response.adoc[]
+=======
+
+include::{snippets}/team-create/request-fields.adoc[]
+
+=== 응답
+
+include::{snippets}/team-create/http-response.adoc[]
 
 == 팀 수정
 
