--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -41,6 +41,28 @@ include::{snippets}/product-update/path-parameters.adoc[]
 
 include::{snippets}/product-update/http-response.adoc[]
 
+== 상품 조회
+
+=== 요청
+
+include::{snippets}/product-detail/http-request.adoc[]
+
+include::{snippets}/product-detail/path-parameters.adoc[]
+
+=== 응답
+
+include::{snippets}/product-detail/http-response.adoc[]
+
+== 상품 페이징
+
+include::{snippets}/product-pagination/http-request.adoc[]
+
+include::{snippets}/product-pagination/request-fields.adoc[]
+
+=== 응답
+
+include::{snippets}/product-pagination/http-response.adoc[]
+
 == 팀 생성
 
 === 요청
